--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,11 @@
   # located at the absolute path "root/project/build-output"
 
   publish = "dist/"
+
+[[headers]]
+# Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
